RESOLVED FIXED16195
REGRESSION: JavaScriptCore and LayoutTest failures
https://bugs.webkit.org/show_bug.cgi?id=16195
Summary REGRESSION: JavaScriptCore and LayoutTest failures
Eric Seidel (no email)
Reported 2007-11-29 18:19:18 PST
http://build.webkit.org/builders/trunk-mac-ppc-release/builds/9420 This was caused by: http://trac.webkit.org/projects/webkit/changeset/28186 Which was a fix for: http://trac.webkit.org/projects/webkit/changeset/28151 r28151 had incorrectly removed { } from an if/else block, leading to the crash. I fixed that, but either something was wrong in my fix (r28186) or that fix exposed some other bug. Unfortunately the fixes aren't properly ordered, so it's hard to figure out if that uncovered some other bug. I failed to run *all* of the tests after preparing r28186, I was only running the crashing test at the time. Oops. When I get around to fixing this, I'll do so by reordering the commits on a local git branch and squashing 28186 on top of 28151 and then running git-bisect against the whole set of PCRE fixes looking for where these new regressions occurred. Then I'll just stare at the diff until I find the unintended logical change, or I'll use the diffs in the test results to guide me to the right area. Unfortunately I don't have a fully functional computer and internet setup right now (I'm setting up my new apartment) so it might be a day or more before I get to sit down and fix this. If I'm on IRC (as MacDome) you might want to ask me if I'm working on it before you do. If I'm not on IRC, I won't be working on it. :)
Attachments
2007-11-30 Eric Seidel <eric@webkit.org> (1.29 KB, patch)
2007-11-30 00:45 PST, Eric Seidel (no email)
oliver: review+
Eric Seidel (no email)
Comment 1 2007-11-29 19:06:32 PST
I seem to have broken case insensitive matching with this change.
Eric Seidel (no email)
Comment 2 2007-11-29 20:03:48 PST
Ok, so git-bisect has revealed that this fix revealed a bug in r28181. The test failures are caused by problems in r28181.
Eric Seidel (no email)
Comment 3 2007-11-30 00:45:41 PST
Created attachment 17600 [details] 2007-11-30 Eric Seidel <eric@webkit.org> Reviewed by Maciej. Fix layout test regressions caused by r28186 http://bugs.webkit.org/show_bug.cgi?id=16195 change first_byte and req_byte back to shorts instead of chars (I think PCRE stuffs information in the high bits) * pcre/pcre_internal.h: --- JavaScriptCore/ChangeLog | 11 +++++++++++ JavaScriptCore/pcre/pcre_internal.h | 4 ++-- 2 files changed, 13 insertions(+), 2 deletions(-)
Note You need to log in before you can comment on or make changes to this bug.