2007-11-30  Eric Seidel  <eric@webkit.org>

Reviewed by Maciej.

        Fix layout test regressions caused by r28186
        http://bugs.webkit.org/show_bug.cgi?id=16195
        change first_byte and req_byte back to shorts instead of chars
        (I think PCRE stuffs information in the high bits)

        * pcre/pcre_internal.h:


Canonical link: https://commits.webkit.org/22148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28229 268f45cc-cd09-0410-ab3c-d52691b4dbfc